fix: prevent redoc overflow with unwrappable content.
(cherry picked from commit c129c3798bfd526bb9b2313cc412d6464644c451)

--- a/gravitee-apim-portal-webui-next/src/components/redoc-content-viewer/redoc-content-viewer.component.scss
+++ b/gravitee-apim-portal-webui-next/src/components/redoc-content-viewer/redoc-content-viewer.component.scss
@@ -26,4 +26,5 @@
 #redoc {
   width: 100%;
   overflow: visible;
+  overflow-wrap: anywhere;
 }
